infra/k8s/feed-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-depl
spec:
  replicas: 1    
  selector:
   matchLabels:
     app: feed
  template:
     metadata:
       labels:
         app: feed
     spec:
       containers:
         - name: feed
           image: 1ryber/udacity-restapi-feed
           resources:
             requests:
               cpu: 50m
               memory: 50Mi
             limits:
               cpu: 100m
               memory: 100Mi

---


apiVersion: v1
kind: Service
metadata:
  name: feed
spec:
  selector:
    app: feed
  ports:
    - name: feed
      protocol: TCP
      port: 8080
      targetPort: 8080
